--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env NODE_ENV=dev nodemon index.js",
     "build": "webpack --config ./build/webpack.prod.js && webpack --config ./build/webpack.ssr.js",
     "ssr": "webpack --config ./build/webpack.ssr.js",
-    "start": "cross-env NODE_ENV=production forever index.js",
+    "start": "cross-env NODE_ENV=production forever start index.js",
     "server": "cross-env NODE_ENV=production nodemon index.js",
     "prod": "webpack --config ./build/webpack.prod.js && webpack --config ./build/webpack.ssr.js && cross-env NODE_ENV=production node index.js"
   },
