--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "connect-history-api-fallback": "^1.5.0",
+    "connect-redis": "^3.4.0",
     "crypto-js": "^3.1.9-1",
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
@@ -34,6 +35,7 @@
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
     "multer": "^1.4.1",
+    "redis": "^2.8.0",
     "superagent": "^3.8.3",
     "uuid": "^3.3.2",
     "vue": "^2.5.16",
