--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
     "multer": "^1.4.1",
+    "nodemon": "^1.18.8",
     "superagent": "^3.8.3",
     "uuid": "^3.3.2",
     "vue": "^2.5.16",
