--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "crypto-js": "^3.1.9-1",
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
+    "js-xlsx": "^0.8.22",
     "log4js": "^3.0.6",
     "method-override": "^3.0.0",
     "mockjs": "^1.0.1-beta3",
