--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nodemon": "^1.18.8",
     "redis": "^2.8.0",
     "superagent": "^3.8.3",
+    "svg-captcha": "^1.3.12",
     "uuid": "^3.3.2",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
