--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test forever start index.js",
     "dev": "cross-env NODE_ENV=dev nodemon index.js",
     "build": "webpack --config ./build/webpack.prod.js && webpack --config ./build/webpack.ssr.js",
     "ssr": "webpack --config ./build/webpack.ssr.js",
